--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "kasa-p11",
+  "name": "kasa",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://dahisland.github.io/kasa",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
@@ -20,6 +21,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
